--- a/NoutejiBottyBot/pom.xml
+++ b/NoutejiBottyBot/pom.xml
@@ -31,6 +31,13 @@
       <artifactId>jsoup</artifactId>
       <version>1.14.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.7</version>
+    </dependency>
+
   </dependencies>
 
   <build>
